--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "homepage": "https://github.com/reo7sp/reo-web-starter-kit#readme",
   "dependencies": {
+    "jquery-slim": "^3.0.0",
     "purecss": "^0.6.0"
   },
   "devDependencies": {
