--- a/package.json
+++ b/package.json
@@ -22,26 +22,31 @@
   "devDependencies": {
     "browser-sync": "^2.13.0",
     "browserify": "^13.0.1",
+    "browserify-incremental": "^3.1.1",
     "coffee-script": "^1.10.0",
     "coffeeify": "^2.0.1",
     "del": "^2.2.1",
+    "exorcist": "^0.4.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-cached": "^1.1.0",
-    "gulp-cssnano": "^2.1.2",
+    "gulp-csso": "^2.0.0",
     "gulp-htmlmin": "^2.0.0",
     "gulp-imagemin": "^3.0.1",
     "gulp-load-plugins": "^1.2.4",
+    "gulp-notify": "^2.2.0",
     "gulp-nunjucks-render": "^2.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-rev": "^7.1.0",
+    "gulp-rev-replace": "^0.4.3",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-surge": "^0.1.0",
     "gulp-uglify": "^1.5.4",
-    "gulp-util": "^3.0.7",
     "lodash": "^4.13.1",
     "run-sequence": "^1.2.2",
+    "sassy-npm-importer": "^2.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
