--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "exorcist": "^0.4.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-awspublish": "^3.3.0",
     "gulp-cached": "^1.1.0",
     "gulp-csso": "^2.0.0",
     "gulp-htmlmin": "^2.0.0",
