--- a/package.json
+++ b/package.json
@@ -1,54 +1,47 @@
 {
-  "name": "reo7sp.ru",
-  "version": "0.0.0",
-  "description": "",
-  "scripts": {
-    "start": "gulp serve"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/reo7sp/reo-web-starter-kit.git"
-  },
-  "author": "reo7sp",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/reo7sp/reo-web-starter-kit/issues"
-  },
-  "homepage": "https://github.com/reo7sp/reo-web-starter-kit#readme",
-  "dependencies": {
-    "jquery-slim": "^3.0.0",
-    "purecss": "^1.0.0"
-  },
-  "devDependencies": {
-    "browser-sync": "^2.13.0",
-    "browserify": "^14.4.0",
-    "browserify-incremental": "^3.1.1",
-    "coffee-script": "^1.10.0",
-    "coffeeify": "^2.0.1",
-    "del": "^3.0.0",
-    "exorcist": "^0.4.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^4.0.0",
-    "gulp-awspublish": "^3.3.0",
-    "gulp-cached": "^1.1.0",
-    "gulp-csso": "^3.0.0",
-    "gulp-htmlmin": "^3.0.0",
-    "gulp-imagemin": "^3.0.1",
-    "gulp-load-plugins": "^1.2.4",
-    "gulp-notify": "^3.0.0",
-    "gulp-nunjucks-render": "^2.0.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-rev": "^8.0.0",
-    "gulp-rev-replace": "^0.4.3",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.1",
-    "gulp-surge": "^0.1.0",
-    "gulp-uglify": "^3.0.0",
-    "lodash": "^4.13.1",
-    "run-sequence": "^2.1.0",
-    "sassy-npm-importer": "^2.0.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
-  }
+    "name": "oleg.rocks",
+    "version": "0.0.0",
+    "description": "",
+    "scripts": {
+        "start": "http-server dist -o",
+        "build": "webpack --config webpack.prod.js",
+        "watch": "webpack-dev-server --open --config webpack.dev.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/reo7sp/site.git"
+    },
+    "author": "Oleg Morozenkov",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/reo7sp/site/issues"
+    },
+    "homepage": "https://github.com/reo7sp/site#readme",
+    "dependencies": {
+        "jquery-slim": "^3.0.0",
+        "normalize.css": "^7.0.0"
+    },
+    "devDependencies": {
+        "autoprefixer": "^7.1.6",
+        "babel-core": "^6.26.0",
+        "babel-loader": "^7.1.2",
+        "babel-preset-env": "^1.6.1",
+        "clean-webpack-plugin": "^0.1.17",
+        "copy-webpack-plugin": "^4.2.3",
+        "css-loader": "^0.28.7",
+        "cssnano": "^3.10.0",
+        "ejs": "^2.5.7",
+        "ejs-html-loader": "^3.1.0",
+        "ejs-simple-loader": "^0.1.1",
+        "extract-text-webpack-plugin": "^3.0.2",
+        "html-webpack-plugin": "^2.30.1",
+        "http-server": "^0.10.0",
+        "node-sass": "^4.7.2",
+        "postcss-loader": "^2.0.9",
+        "sass-loader": "^6.0.6",
+        "uglifyjs-webpack-plugin": "latest",
+        "webpack": "^3.9.1",
+        "webpack-dev-server": "^2.9.5",
+        "webpack-merge": "^4.1.1"
+    }
 }
