--- a/package.json
+++ b/package.json
@@ -21,30 +21,30 @@
     "homepage": "https://github.com/reo7sp/resume#readme",
     "dependencies": {
         "jquery-slim": "^3.0.0",
-        "normalize.css": "^7.0.0"
+        "normalize.css": "^8.0.1"
     },
     "devDependencies": {
-        "autoprefixer": "^7.1.6",
-        "babel-core": "^6.26.0",
-        "babel-loader": "^7.1.2",
-        "babel-preset-env": "^1.6.1",
-        "clean-webpack-plugin": "^0.1.17",
-        "copy-webpack-plugin": "^4.2.3",
-        "css-loader": "^0.28.7",
-        "cssnano": "^3.10.0",
-        "ejs": "^2.5.7",
-        "ejs-html-loader": "^3.1.0",
-        "ejs-simple-loader": "^0.1.1",
-        "extract-text-webpack-plugin": "^3.0.2",
-        "html-webpack-plugin": "^2.30.1",
-        "http-server": "^0.10.0",
-        "node-sass": "^4.7.2",
-        "postcss-loader": "^2.0.9",
-        "s3-deploy": "^0.8.0",
-        "sass-loader": "^6.0.6",
-        "uglifyjs-webpack-plugin": "latest",
-        "webpack": "^3.9.1",
-        "webpack-dev-server": "^2.9.5",
-        "webpack-merge": "^4.1.1"
+        "@babel/core": "^7.2.0",
+        "@babel/preset-env": "^7.2.0",
+        "autoprefixer": "^9.4.2",
+        "babel-loader": "^8.0.4",
+        "babel-preset-env": "^1.7.0",
+        "clean-webpack-plugin": "^1.0.0",
+        "copy-webpack-plugin": "^4.6.0",
+        "css-loader": "^2.0.0",
+        "cssnano": "^4.1.7",
+        "ejs": "^2.6.1",
+        "ejs-webpack-loader": "^2.2.2",
+        "extract-text-webpack-plugin": "^4.0.0-beta.0",
+        "html-webpack-plugin": "^3.2.0",
+        "http-server": "^0.11.1",
+        "node-sass": "^4.10.0",
+        "postcss-loader": "^3.0.0",
+        "s3-deploy": "^1.1.6",
+        "sass-loader": "^7.1.0",
+        "webpack": "^4.27.1",
+        "webpack-cli": "^3.1.2",
+        "webpack-dev-server": "^3.1.10",
+        "webpack-merge": "^4.1.4"
     }
 }
