upd package-lock.json

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "gulp-plumber": "^1.2.1",
     "gulp-sass": "^4.0.2"
   },
+  "overrides": {
+    "graceful-fs": "^4.2.11"
+  },
   "scripts": {
     "build": "gulp build",
     "watch": "gulp watch"
